# intelligent_routing

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
doc/: api.md  architecture.md  strategies.md
src/: accelerator.rs  bindings.rs  lib.rs  main.rs  request.rs  router.rs
src/strategies/: least_connections.rs  mod.rs  p2c.rs  round_robin.rs
tests/: scale_test.py  test_routing.py
